# Qt_Snake

./: CMakeLists.txt  main.cpp  readme.md
inc/: Constants.h  Snake.h
src/: Snake.cpp
